version/0.10/_sources/examples/04-Icepak/Sherlock_Example.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\04-Icepak\Sherlock_Example.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_04-Icepak_Sherlock_Example.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_04-Icepak_Sherlock_Example.py:


Icepak: setup from Sherlock inputs
-----------------------------------
This example shows how you can create an Icepak project from Sherlock
files (STEP and CSV) and an AEDB board.

.. GENERATED FROM PYTHON SOURCE LINES 8-11

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports and set paths.

.. GENERATED FROM PYTHON SOURCE LINES 11-21

.. code-block:: Python


    import time
    import os
    import ansys.aedt.core
    import datetime

    # Set paths
    project_folder = ansys.aedt.core.generate_unique_folder_name()
    input_dir = ansys.aedt.core.downloads.download_sherlock(destination=project_folder)








.. GENERATED FROM PYTHON SOURCE LINES 22-25

Set AEDT version
~~~~~~~~~~~~~~~~
Set AEDT version.

.. GENERATED FROM PYTHON SOURCE LINES 25-28

.. code-block:: Python


    aedt_version = "2024.2"








.. GENERATED FROM PYTHON SOURCE LINES 29-33

Set non-graphical mode
~~~~~~~~~~~~~~~~~~~~~~
Set non-graphical mode. 
You can set ``non_graphical`` value either to ``True`` or ``False``.

.. GENERATED FROM PYTHON SOURCE LINES 33-36

.. code-block:: Python


    non_graphical = False








.. GENERATED FROM PYTHON SOURCE LINES 37-41

Define variables
~~~~~~~~~~~~~~~~
Define input variables. The following code creates all input variables that are needed
to run this example.

.. GENERATED FROM PYTHON SOURCE LINES 41-48

.. code-block:: Python


    material_name = "MaterialExport.csv"
    component_properties = "TutorialBoardPartsList.csv"
    component_step = "TutorialBoard.stp"
    aedt_odb_project = "SherlockTutorial.aedt"
    aedt_odb_design_name = "PCB"








.. GENERATED FROM PYTHON SOURCE LINES 49-52

Launch AEDT
~~~~~~~~~~~
Launch AEDT 2024 R2 in graphical mode.

.. GENERATED FROM PYTHON SOURCE LINES 52-63

.. code-block:: Python


    d = ansys.aedt.core.launch_desktop(version=aedt_version, non_graphical=non_graphical, new_desktop=True)

    start = time.time()
    material_list = os.path.join(input_dir, material_name)
    component_list = os.path.join(input_dir, component_properties)
    validation = os.path.join(project_folder, "validation.log")
    file_path = os.path.join(input_dir, component_step)
    project_name = os.path.join(project_folder, component_step[:-3] + "aedt")
    component_name = "from_ODB"





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C:\actions-runner\_work\_tool\Python\3.10.9\x64\lib\subprocess.py:1072: ResourceWarning: subprocess 5704 is still running
      _warn("subprocess %s is still running" % self.pid,
    C:\actions-runner\_work\pyaedt\pyaedt\.venv\lib\site-packages\ansys\aedt\core\generic\settings.py:231: ResourceWarning: unclosed file <_io.TextIOWrapper name='D:\\Temp\\pyaedt_ansys_260622a4-692f-48cc-bef3-b1a76554a3cc.log' mode='a' encoding='cp1252'>
      self.__logger = val




.. GENERATED FROM PYTHON SOURCE LINES 64-67

Create Icepak project
~~~~~~~~~~~~~~~~~~~~~
Create an Icepak project.

.. GENERATED FROM PYTHON SOURCE LINES 67-70

.. code-block:: Python


    ipk = ansys.aedt.core.Icepak(project=project_name)








.. GENERATED FROM PYTHON SOURCE LINES 71-74

Disable autosave to speed up import
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Disable autosave to speed up the import.

.. GENERATED FROM PYTHON SOURCE LINES 74-77

.. code-block:: Python


    d.disable_autosave()








.. GENERATED FROM PYTHON SOURCE LINES 78-81

Import PCB from AEDB file
~~~~~~~~~~~~~~~~~~~~~~~~~
Import a PCB from an AEDB file.

.. GENERATED FROM PYTHON SOURCE LINES 81-86

.. code-block:: Python


    odb_path = os.path.join(input_dir, aedt_odb_project)
    ipk.create_pcb_from_3dlayout(component_name=component_name, project_name=odb_path, design_name=aedt_odb_design_name,
                                 extenttype="Polygon")





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    C:\actions-runner\_work\pyaedt\pyaedt\.venv\lib\site-packages\ansys\aedt\core\icepak.py:2576: DeprecationWarning: ``extenttype`` was deprecated in 0.6.43. Use ``extent_type`` instead.
      warnings.warn(

    <ansys.aedt.core.modules.boundary.NativeComponentPCB object at 0x000002724E5229E0>



.. GENERATED FROM PYTHON SOURCE LINES 87-91

Create offset coordinate system
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Create an offset coordinate system to match ODB++ with the
Sherlock STEP file.

.. GENERATED FROM PYTHON SOURCE LINES 91-98

.. code-block:: Python


    bb = ipk.modeler.user_defined_components[component_name+"1"].bounding_box
    stackup_thickness = bb[-1] - bb[2]
    ipk.modeler.create_coordinate_system(
        origin=[0, 0, stackup_thickness / 2], mode="view", view="XY"
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <ansys.aedt.core.modeler.cad.modeler.CoordinateSystem object at 0x000002B3174DF340>



.. GENERATED FROM PYTHON SOURCE LINES 99-102

Import CAD file
~~~~~~~~~~~~~~~
Import a CAD file and delete the CAD "pcb" object as the ECAD is already in the design.

.. GENERATED FROM PYTHON SOURCE LINES 102-106

.. code-block:: Python


    ipk.modeler.import_3d_cad(file_path, refresh_all_ids=False)
    ipk.modeler.delete_objects_containing("pcb", False)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 107-110

Modify air region
~~~~~~~~~~~~~
Modify air region dimensions.

.. GENERATED FROM PYTHON SOURCE LINES 110-113

.. code-block:: Python


    ipk.mesh.global_mesh_region.global_region.padding_values = [20, 20, 20, 20, 300, 300]








.. GENERATED FROM PYTHON SOURCE LINES 114-117

Assign materials
~~~~~~~~~~~~~~~~
Assign materials from Sherlock file.

.. GENERATED FROM PYTHON SOURCE LINES 117-122

.. code-block:: Python


    ipk.assignmaterial_from_sherlock_files(
        component_file=component_list, material_file=material_list
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 123-126

Delete objects with no material assignments
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Delete objects with no materials assignments.

.. GENERATED FROM PYTHON SOURCE LINES 126-131

.. code-block:: Python


    no_material_objs = ipk.modeler.get_objects_by_material("")
    ipk.modeler.delete(no_material_objs)
    ipk.save_project()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 132-135

Assign power to component blocks
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Assign power to component blocks.

.. GENERATED FROM PYTHON SOURCE LINES 135-138

.. code-block:: Python


    all_objects = ipk.modeler.object_names








.. GENERATED FROM PYTHON SOURCE LINES 139-142

Assign power blocks
~~~~~~~~~~~~~~~~~~~
Assign power blocks from the Sherlock file.

.. GENERATED FROM PYTHON SOURCE LINES 142-145

.. code-block:: Python


    total_power = ipk.assign_block_from_sherlock_file(csv_name=component_list)








.. GENERATED FROM PYTHON SOURCE LINES 146-149

Assign openings
~~~~~~~~~~~~~~~~~~~
Assign opening boundary condition to all the faces of the region.

.. GENERATED FROM PYTHON SOURCE LINES 149-151

.. code-block:: Python

    ipk.assign_openings(ipk.modeler.get_object_faces("Region"))





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <ansys.aedt.core.modules.boundary.BoundaryObject object at 0x000002B31DAFB160>



.. GENERATED FROM PYTHON SOURCE LINES 152-155

Plot model
~~~~~~~~~~
Plot the model again now that materials are assigned.

.. GENERATED FROM PYTHON SOURCE LINES 155-163

.. code-block:: Python


    ipk.plot(
        show=False,
        output_file=os.path.join(project_folder, "Sherlock_Example.jpg"),
        plot_air_objects=False,
        plot_as_separate_objects=False
    )




.. image-sg:: /examples/04-Icepak/images/sphx_glr_Sherlock_Example_001.png
   :alt: Sherlock Example
   :srcset: /examples/04-Icepak/images/sphx_glr_Sherlock_Example_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <ansys.aedt.core.generic.plot.ModelPlotter object at 0x000002B31DAF8970>



.. GENERATED FROM PYTHON SOURCE LINES 164-167

Set up mesh settings
~~~~~~~~~~~~~~~~~
Mesh settings that is tailored for PCB

.. GENERATED FROM PYTHON SOURCE LINES 167-171

.. code-block:: Python


    ipk.globalMeshSettings(3, gap_min_elements='1', noOgrids=True, MLM_en=True,
                                MLM_Type='2D', edge_min_elements='2', object='Region')





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 172-174

Numerical settings
~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 174-182

.. code-block:: Python


    setup1 = ipk.create_setup()
    setup1.props["Solution Initialization - Y Velocity"] = "1m_per_sec"
    setup1.props["Radiation Model"] = "Discrete Ordinates Model"
    setup1.props["Include Gravity"] = True
    setup1.props["Secondary Gradient"] = True
    setup1.props["Convergence Criteria - Max Iterations"] = 100








.. GENERATED FROM PYTHON SOURCE LINES 183-187

Check for intersections
~~~~~~~~~~~~~~~~~~~~~~~
Check for intersections using validation and fix them by
assigning priorities.

.. GENERATED FROM PYTHON SOURCE LINES 187-190

.. code-block:: Python


    ipk.assign_priority_on_intersections()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    True



.. GENERATED FROM PYTHON SOURCE LINES 191-193

Compute power budget
~~~~~~~~~~~~~~~~~~~~

.. GENERATED FROM PYTHON SOURCE LINES 193-197

.. code-block:: Python


    power_budget, total = ipk.post.power_budget("W")
    print(total)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    5.6000000000000005




.. GENERATED FROM PYTHON SOURCE LINES 198-201

Save project and release AEDT
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Save the project and release AEDT.

.. GENERATED FROM PYTHON SOURCE LINES 201-208

.. code-block:: Python


    ipk.save_project()

    end = time.time() - start
    print("Elapsed time: {}".format(datetime.timedelta(seconds=end)))
    print("Project Saved in {} ".format(ipk.project_file))
    ipk.release_desktop()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Elapsed time: 0:01:29.797129
    Project Saved in D:/Temp/pyaedt_prj_H5A/TutorialBoard.aedt 

    True




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 42.660 seconds)


.. _sphx_glr_download_examples_04-Icepak_Sherlock_Example.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: Sherlock_Example.ipynb <Sherlock_Example.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: Sherlock_Example.py <Sherlock_Example.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: Sherlock_Example.zip <Sherlock_Example.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
